--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
 							<i id="exit-icon" class="fas fa-phone-slash"></i>
 						</button>
 					</div>
-          <!-- <div class="col-md-2 text-center">
-						<button id="gesture-btn"  type="button" onclick="init()" class="btn btn-block btn-danger btn-lg">
-							<i id="gesture-icon" class="fas fa-american-sign-language-interpreting"></i>
+          <div class="col-md-2 text-center">
+						<button id="gesture-btn"  type="button" class="btn btn-block btn-danger btn-lg">
+							<i id="gesture-icon" class="fas fa-american-sign-language-interpreting" onclick="init()"></i>
 						</button>
-					</div> -->
-          <div class="button-group">
+					</div>
+          <!-- <div class="button-group">
             <button type="button" onclick="init()">Start</button>
             <button type="button" onclick="pause()">Stop</button>
-          </div>
+          </div> -->
 				</div>
 				<div id="full-screen-video"></div>
 				<div id="lower-video-bar" class="row fixed-bottom mb-1">
@@ -98,7 +98,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
 
-  <!-- tensorflow.js scripts -->
+  <!-- tensorflow.js and posenet scripts -->
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/pose@0.8/dist/teachablemachine-pose.min.js"></script>
 
