--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
             </div>
             <div class="md-form mb-4">
               <input type="text" id="form-channel" class="form-control">
-              <label for="form-channel">Channel</label>
+              <label for="form-channel">Channel Name</label>
             </div>
             <div class="md-form mb-4">
-              <input type="number" id="form-uid" class="form-control" value="1001" data-decimals="0"/>
-              <label for="form-uid">UID</label>
+              <input type="number" id="form-uid" class="form-control" value="1" data-decimals="0"/>
+              <label for="form-uid">User ID</label>
             </div>
           </div>
           <div class="modal-footer d-flex justify-content-center">
@@ -96,7 +96,7 @@
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" rel="stylesheet">
   <!-- JS Includes go here -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
 
   <!-- tensorflow.js and posenet scripts -->
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
@@ -106,12 +106,13 @@
 		$("#mic-btn").prop("disabled", true);
 		$("#video-btn").prop("disabled", true);
 		$("#exit-btn").prop("disabled", true);
-    $("#gesture-btn").prop("disabled", true);
+        $("#gesture-btn").prop("disabled", true);
 
 		$(document).ready(function(){
 			$("#modalForm").modal("show");
 		});
 	</script>
+	
 	<script type="text/javascript">
 		// init the session when user clicks join btn
 		$( "#join-channel" ).click(function( event ) {
