--- a/index.html
+++ b/index.html
@@ -1,131 +1,125 @@
+<!doctype html>
 <html lang="en">
-	<head>
-		<title>Agora Gesture Video Chat</title>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-	</head>
-	<body>
-		<div class="container-fluid p-0">
-			<div id="main-container">
-				<div id="buttons-container" class="row justify-content-center mt-3">
-					<div class="col-md-2 text-center">
-						<button id="mic-btn" type="button" class="btn btn-block btn-dark btn-lg">
-							<i id="mic-icon" class="fas fa-microphone"></i>
-						</button>
-					</div>
-					<div class="col-md-2 text-center">
-						<button id="video-btn"  type="button" class="btn btn-block btn-dark btn-lg">
-							<i id="video-icon" class="fas fa-video"></i>
-						</button>
-					</div>
-					<div class="col-md-2 text-center">
-						<button id="exit-btn"  type="button" class="btn btn-block btn-danger btn-lg">
-							<i id="exit-icon" class="fas fa-phone-slash"></i>
-						</button>
-					</div>
-          <div class="col-md-2 text-center">
-						<button id="gesture-btn"  type="button" class="btn btn-block btn-danger btn-lg">
-							<i id="gesture-icon" class="fas fa-american-sign-language-interpreting" onclick="init()"></i>
-						</button>
-					</div>
-          <!-- <div class="button-group">
-            <button type="button" onclick="init()">Start</button>
-            <button type="button" onclick="pause()">Stop</button>
-          </div> -->
-				</div>
-				<div id="full-screen-video"></div>
-				<div id="lower-video-bar" class="row fixed-bottom mb-1">
-					<div id="remote-streams-container" class="container col-9 ml-1">
-						<div id="remote-streams" class="row">
-							<!-- insert remote streams dynamically -->
-						</div>
-					</div>
-					<div id="local-stream-container" class="col p-0">
-						<div id="mute-overlay" class="col">
-							<i id="mic-icon" class="fas fa-microphone-slash"></i>
-						</div>
-						<div id="no-local-video" class="col text-center">
-							<i id="user-icon" class="fas fa-user"></i>
-						</div>
-						<div id="local-video" class="col p-0"></div>
-					</div>
-				</div>
-			</div>
-		</div>
-    <div class="modal fade" id="modalForm">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header text-center">
-            <h4 class="modal-title w-100 font-weight-bold">Join Channel</h4>
-            <button type="button" class="close" data-dismiss="modal">
-              <span>&times;</span>
-            </button>
-          </div>
-          <div class="modal-body mx-3">
-            <div class="md-form mb-4">
-              <input type="text" id="form-appid" class="form-control">
-              <label for="form-appid">Agora AppId</label>
+
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+
+    <style>
+        .bg-base-blue {
+            background-color: #1E3799;
+        }
+
+        .bg-turquoise {
+            background-color: #17eac471;
+        }
+
+        .text-base-blue {
+            color: #1E3799;
+        }
+    </style>
+    <title>Agora Gesture Video Chat</title>
+</head>
+
+<body class="d-flex flex-column min-vh-100 container-fluid">
+    <header>
+        <nav class="d-flex flex-row flex-wrap container">
+            <div class="nav pt-2">
+                <a class="nav-link active fw-bold fs-4 text-dark" aria-current="page" href="#">PoseCall</a>
+                <a class="nav-link fs-5 mt-1 text-dark" href="#">Features</a>
+                <a class="nav-link fs-5 mt-1 text-dark" href="#">Developers</a>
             </div>
-            <div class="md-form mb-4">
-              <input type="text" id="form-token" class="form-control">
-              <label for="form-token">Agora Token</label>
+            <div class="d-none">middle div</div>
+            <div class="pt-3 ms-auto">
+                <a class="btn btn-sm text-white bg-base-blue align-middle pt-1" href="./videochat.html">Try Now</a>
             </div>
-            <div class="md-form mb-4">
-              <input type="text" id="form-channel" class="form-control">
-              <label for="form-channel">Channel Name</label>
+        </nav>
+        <!-- banner -->
+        <div
+            class="p-4 mt-4 bg-turquoise rounded min-h-75 container d-flex flex-lg-row flex-column justify-content-center">
+            <div class="mw-100 p-1">
+                <img src="./assets/img/home_header.jpg" alt="home header" class="w-100 rounded">
             </div>
-            <div class="md-form mb-4">
-              <input type="number" id="form-uid" class="form-control" value="1" data-decimals="0"/>
-              <label for="form-uid">User ID</label>
+            <div class="container">
+                <h1>Gesture based Video Chat</h1>
+                <p class="p-2 mt-4 mb-4 fs-6 lh-lg font-monospace">
+                    This is a gesture based video chat web app that uses Agora.io to set up a WebRTC interface but with
+                    the twist of AI! I have added gesture based control with uses computer vision algorithms such as
+                    posenet to detect a pose and trigger functions accordingly.
+                </p>
+                <a class="btn btn-lg text-white bg-base-blue" href="../index.html">Try for free</a>
             </div>
-          </div>
-          <div class="modal-footer d-flex justify-content-center">
-            <button id="join-channel" class="btn btn-default">Join Channel</button>
-          </div>
         </div>
-      </div>
-    </div>
-    </body>
+    </header>
+    <!-- Main content -->
+    <content class="container my-4">
+        <!-- row 1 -->
+        <div class="d-flex flex-md-row flex-column justify-content-center py-4">
+            <div class="container">
+                <img src="assets/img/content_1.jpg" class="mw-50 mw-100">
+            </div>
+            <div class="container d-flex flex-column justify-content-evenly">
+                <div class="container d-flex flex-row justify-content-between w-75">
+                    <span class="fs-5">
+                        Real Time Video Chat
+                    </span>
+                      <!-- middle placeholder -->
+                    <img src="./assets/svg/Camera video fill.svg" style="width: 2.6rem;">
+                </div>
+                
+                <div class="container d-flex flex-row justify-content-between w-75">
+                    <span class="fs-5">
+                        Powered by Computer Vision
+                    </span>
+                    <img src="./assets/svg/Eye fill.svg" style="width: 2.6rem;">
+                </div>
+            </div>
+        </div>
+        <!-- row 2 -->
+        <div class="d-flex flex-md-row flex-column justify-content-center py-4">
+            <div class="container d-flex flex-column justify-content-evenly">
+                <div class="container d-flex flex-row justify-content-between w-75">
+                    <span class="fs-5">
+                        with added chat functionality 
+                        <span class="badge rounded-pill bg-secondary">coming soon!</span>
+                    </span>
+                      <!-- middle placeholder -->
+                    <img src="./assets/svg/Chat quote fill.svg" style="width: 2.6rem;">
+                </div>
+                
+                <div class="container d-flex flex-row justify-content-between w-75">
+                    <span class="fs-5">
+                        Multiple participants allowed
+                    </span>
+                    <img src="./assets/svg/Person plus fill.svg" style="width: 2.6rem;">
+                </div>
+            </div>
+            <div class="container">
+                <img src="assets/img/content_2.jpg" class="mw-50 mw-100 rounded">
+            </div>
+        </div>
+    </content>
 
-    <script src="AgoraRTCSDK-3.3.1.js"></script>
+    <!-- Add div for FAQ  -->
 
-  <!-- CSS Includes go here -->
-  <link rel="stylesheet" type="text/css" href="./styles.css"/>
-  <!-- Bootstrap and Font Awesome CSS Libraries -->
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
-  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" rel="stylesheet">
-  <!-- JS Includes go here -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
+    <!-- footer -->
+    <footer class="mt-auto text-center pb-2">
+        <p>
+            Developed by Yuvraj Singh Pathania
+            <br>
+            Powered by
+        </p>
+        <img src="./assets/svg/agora_logo.svg" alt="Agora logo" style="max-width: 18%; margin-top: -1rem;">
+    </footer>
 
-  <!-- tensorflow.js and posenet scripts -->
-  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/pose@0.8/dist/teachablemachine-pose.min.js"></script>
-
-	<script type="text/javascript">
-		$("#mic-btn").prop("disabled", true);
-		$("#video-btn").prop("disabled", true);
-		$("#exit-btn").prop("disabled", true);
-        $("#gesture-btn").prop("disabled", true);
-
-		$(document).ready(function(){
-			$("#modalForm").modal("show");
-		});
-	</script>
-	
-	<script type="text/javascript">
-		// init the session when user clicks join btn
-		$( "#join-channel" ).click(function( event ) {
-			var agoraAppId = $('#form-appid').val();
-			var token = $('#form-token').val();
-			var channelName = $('#form-channel').val();
-			var uid = parseInt($("#form-uid").val());
-			$("#modalForm").modal("hide");
-			initClientAndJoinChannel(agoraAppId, token, channelName, uid);
-		});
-	</script>
-	<script src="./ui.js"></script>
-	<script src="./agora.js"></script>
-  <script src="./pose.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
+        crossorigin="anonymous"></script>
+</body>
 
 </html>
