--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     the twist of AI! I have added gesture based control with uses computer vision algorithms such as
                     posenet to detect a pose and trigger functions accordingly.
                 </p>
-                <a class="btn btn-lg text-white bg-base-blue" href="../index.html">Try for free</a>
+                <a class="btn btn-lg text-white bg-base-blue" href="./videochat.html">Try for free</a>
             </div>
         </div>
     </header>
