--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 </content>
 
 
-<!-- Add div for FAQ  -->
+<!--div for FAQ  -->
 
 <section class="accordion-section clearfix mt-3" aria-label="Question Accordions">
     <div id="faqs">
@@ -184,8 +184,8 @@
 <!-- footer -->
 <footer class="mt-auto text-center pb-2">
     <p>
-        Developed by Yuvraj Singh Pathania
-        <br>
+        <!-- Developed by Yuvraj Singh Pathania
+        <br> -->
         Powered by
     </p>
     <img src="./assets/svg/agora_logo.svg" alt="Agora logo" style="max-width: 18%; margin-top: -1rem;">
