Gestures and buttons in sync

--- a/videochat.html
+++ b/videochat.html
@@ -18,12 +18,12 @@
             </label>
         </div>
         <div class="col-md-2 text-center p-4">
-            <button id="mic-btn" type="button" class="btn btn-block btn-dark btn-lg">
+            <button id="mic-btn" type="button" class="btn btn-block btn-danger btn-lg">
                 <i id="mic-icon" class="fas fa-microphone"></i>
             </button>
         </div>
         <div class="col-md-2 text-center p-4">
-            <button id="video-btn" type="button" class="btn btn-block btn-dark btn-lg">
+            <button id="video-btn" type="button" class="btn btn-block btn-danger btn-lg">
                 <i id="video-icon" class="fas fa-video"></i>
             </button>
         </div>
@@ -99,7 +99,7 @@
     </div>
 </body>
 
-<script src="./js/AgoraRTCSDK-3.3.1.js"></script>
+<script src="./js/AgoraRTCSDK-3.6.3.js"></script>
 
 <!-- CSS Includes go here -->
 <link rel="stylesheet" type="text/css" href="./assets/css/styles.css" />
@@ -143,8 +143,10 @@
     })
 </script>
 
-<script src="./js/buttons.js"></script>
 <script src="./js/agora.js"></script>
 <script src="./js/pose.js"></script>
+<script src="./js/buttons.js"></script>
+
+
 
 </html>
