--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <h1>Gesture based Video Chat</h1>
             <p class="p-2 mt-4 mb-4 fs-6 lh-lg font-monospace">
                 This is a gesture based video chat web app that uses Agora.io to set up a WebRTC interface but with
-                the twist of AI! I have added gesture based control with uses computer vision algorithms such as
+                the twist of AI! I have added gesture based control which uses computer vision algorithms such as
                 posenet to detect a pose and trigger functions accordingly.
             </p>
             <a class="btn btn-lg text-white bg-base-blue" href="./videochat.html">Try for free</a>
